# DNSSwitcher

./: .gitignore  LICENSE  README.md  README_zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: cache.rs  dns.rs  mod.rs  settings.rs  stats.rs  upstream.rs
src-tauri/src/config/: models.rs  storage.rs
src-tauri/src/dns/: cache.rs  mod.rs  resolver.rs  server.rs  upstream.rs  wrr.rs
src-tauri/src/dns/protocol/: doh.rs  doq.rs  dot.rs  mod.rs  tcp.rs  udp.rs
src-tauri/src/stats/: collector.rs  models.rs
src-tauri/src/system/: dns_setter.rs  firewall.rs  mod.rs
src/components/cache/: CacheManager.tsx  CacheTable.tsx
src/components/dashboard/: Dashboard.tsx  QpsChart.tsx  StatCard.tsx  UpstreamStatusCard.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/settings/: Settings.tsx
src/components/upstream/: PresetList.tsx  UpstreamForm.tsx  UpstreamManager.tsx  UpstreamTable.tsx
src/hooks/: useStats.ts  useTauri.ts
src/store/: appStore.ts
src/types/: index.ts
